WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302437
crash in iPados26.1 -[WKFullScreenWindowController exitFullScreen:]
https://bugs.webkit.org/show_bug.cgi?id=302437
Summary
crash in iPados26.1 -[WKFullScreenWindowController exitFullScreen:]
dongyehe
Reported
2025-11-12 17:48:10 PST
Created
attachment 477382
[details]
stack information Recently, we have received a large number of crash reports from iPad version 26.1 users. The stack display is caused by triggering the [WKFullScreenWindowController exitFullScreen:] api of webkit. This problem caused the crash rate of our app to more than double, and the crash rate of the iPad to more than quadruple. However, this problem has not been reproduced locally. Please help locate and provide a solution to the problem. Is there a quick fix or some method to workaround? Thank you.
Attachments
stack information
(265.21 KB, image/png)
2025-11-12 17:48 PST
,
dongyehe
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2025-11-13 08:38:50 PST
rdar://164602721
Alexey Proskuryakov
Comment 2
2025-11-13 08:57:43 PST
Thank you for the report! Would it be possible to share (at least in Feedback Assistant) what app is this, and even better, to attach one of the actual crash logs? Almost certainly hitting this RELEASE_ASSERT: TimerBase::TimerBase() { #if USE(WEB_THREAD) RELEASE_ASSERT(WebThreadIsLockedOrDisabledInMainOrWebThread()); #endif } FWIW, the failing assertion hasn't changed in more than a year, and even then it was relaxed, so this is more likely a fullscreen code regression than a generic timer one.
Alex Christensen
Comment 3
2026-01-12 11:05:34 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56457
EWS
Comment 4
2026-01-12 15:45:16 PST
Committed
305484@main
(b54de513e15e): <
https://commits.webkit.org/305484@main
> Reviewed commits have been landed. Closing PR #56457 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug