Cherry-pick b54de513e15e. rdar://168364749

crash in iPados26.1 -[WKFullScreenWindowController exitFullScreen:]
    https://bugs.webkit.org/show_bug.cgi?id=302437
    rdar://164602721

    Reviewed by Chris Dumez.

    301296@main introduced a use of WebCore::Timer in the UI process on iOS, where
    it doesn't work nicely with the web thread if an app is using UIWebView.
    Use NSTimer instead like we do on macOS to prevent crashes.

    * Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
    (-[WKFullScreenWindowController _startWatchdogTimer]):
    (-[WKFullScreenWindowController _cancelWatchdogTimer]):

    Canonical link: https://commits.webkit.org/305484@main

Identifier: 305413.52@safari-7624-branch